# Agentic_Compliance_Analyst

./: .gitignore  Dockerfile  README.md  app.py  auth.py  extract_pdf.py  package.json  pdf_output.txt  pdf_text_utf8.txt  pyproject.toml  reproduce_issue.py  requirements.txt  upload_fix.py  vercel.json  verify_reasoning.py  verify_stress_test_2.py
agent/: analyst.py  schemas.py
backend/: main.py
evaluation/: eval_results.json  golden_dataset.json  run_eval.py  trap_benchmark.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/components/: ChatInterface.tsx  MagicBentoGrid.tsx  Sidebar.tsx
frontend/components/views/: FDASearchView.tsx  GlobalComplianceView.tsx  KnowledgeBaseView.tsx
ingestion/: dynamic_loader.py  layout_parser.py  pdf_loader.py  run_parse.py  schemas.py  semantic_parser.py
tests/: debug_imports.py  debug_tavily.py  test_observability.py  test_schema_compliance.py  test_structured_analyst.py
